manifests/nextheader.dev/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nextheader-dev
  labels:
    name: nextheader-dev
