manifests/nextheader.dev/nextheader-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextheader-dev
  namespace: nextheader-dev
spec:
  selector:
    matchLabels:
      run: nextheader-dev
  replicas: 2
  template:
    metadata:
      labels:
        run: nextheader-dev
    spec:
      containers:
      - name: nextheader-dev
        image: ghcr.io/nxthdr/nextheader.dev:main
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        volumeMounts:
        - name: nextheader-dev-config
          mountPath: /etc/nginx/conf.d
        - name: nextheader-dev-cert
          readOnly: true
          mountPath: /etc/ssl/nginx/
      volumes:
      - name: nextheader-dev-config
        configMap:
          name: nextheader-dev-config
      - name: nextheader-dev-cert
        secret:
          secretName: acme-cert
---
apiVersion: v1
kind: Service
metadata:
  name: nextheader-dev
  namespace: nextheader-dev
  labels:
    run: nextheader-dev
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nextheader.dev
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  type: LoadBalancer
  ports:
  - port: 443
    protocol: TCP
  selector:
    run: nextheader-dev
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: nextheader-dev-policy
  namespace: nextheader-dev
spec:
  selector: run == 'nextheader-dev'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    destination:
      ports:
        - 443
  egress:
  - action: Allow
